--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
 
+    implementation project(path: ':openCVLibrary343')
     compile files('libs/Gaussian.java')
     compile files('libs/ImageUtils.java')
     compile files('libs/JCanny.java')
