--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile files('libs/Sobel.java')
     compile files('libs/Tester.java')
 
+    implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
