--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mbiel"
         android:usesCleartextTraffic="true">
-        <activity android:name=".volleyPost"></activity>
-        <activity android:name=".filterActivity"></activity>
+        <activity android:name=".resultActivity"></activity>
+        <activity android:name=".volleyPost" />
+        <activity android:name=".filterActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
